After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 662253 - The keyboard shortcuts dialog has +/- buttons below the list, but these don't do anything
The keyboard shortcuts dialog has +/- buttons below the list, but these don't...
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Keyboard
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-10-19 23:03 UTC by Wouter Bolsterlee (uws)
Modified: 2011-10-20 09:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
keyboard: Make the '+' button work all the time (2.49 KB, patch)
2011-10-20 09:31 UTC, Bastien Nocera
committed Details | Review

Description Wouter Bolsterlee (uws) 2011-10-19 23:03:21 UTC
The summary says it all.
Comment 1 Bastien Nocera 2011-10-20 08:43:01 UTC
They only do something for the custom shortcuts section. The '+' button should definitely work though, and move to the custom shortcuts section when clicked.
Comment 2 Bastien Nocera 2011-10-20 09:31:41 UTC
Created attachment 199508 [details] [review]
keyboard: Make the '+' button work all the time

We shouldn't need to select the "Custom Shortcuts" section
of the keyboard shortcuts before the add button is made sensitive.

Make it sensitive all the time, and switch to the section as needed.
Comment 3 Bastien Nocera 2011-10-20 09:39:35 UTC
Attachment 199508 [details] pushed as 62cb523 - keyboard: Make the '+' button work all the time