keyboard: Make the '+' button work all the time

We shouldn't need to select the "Custom Shortcuts" section
of the keyboard shortcuts before the add button is made sensitive.

Make it sensitive all the time, and switch to the section as needed.

https://bugzilla.gnome.org/show_bug.cgi?id=662253